@@ -1,6 +1,15 @@
 # Papermc-AIO-Script
 This script is made for Debian (min. stable) and Debian based Distros. Might also work on other linux distros with apt-packagemanager installed.
 
+WARNING: This script runs the Server with root. Only use on private servers. [Read here](https://madelinemiller.dev/blog/root-minecraft-server/)
+
+If you want to use it on public servers:
+- change the line where server.jar gets executed to (Change USER to your USERNAME
+
+```bash
+sudo -u USER java -Xms2G -Xmx2500M -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions -XX:-OmitStackTraceInFastThrow -XX:+ShowCodeDetailsInExceptionMessages -XX:+DisableExplicitGC -XX:-UseParallelGC -XX:+PerfDisableSharedMem -XX:+UseZGC -XX:-ZUncommit -XX:ZUncommitDelay=300 -XX:ZCollectionInterval=5 -XX:ZAllocationSpikeTolerance=2.0 -XX:+ExitOnOutOfMemoryError -XX:+AlwaysPreTouch -XX:-DontCompileHugeMethods -XX:+TrustFinalNonStaticFields -XX:+UseFastUnorderedTimeStamps -XX:+UseTransparentHugePages -XX:LargePageSizeInBytes=2M -XX:+UseLargePages -XX:+UseCMoveUnconditionally -XX:+UseNewLongLShift -XX:+UseVectorCmov -XX:+UseXmmI2D -XX:+UseXmmI2F -XX:+ParallelRefProcEnabled -jar server.jar nogui
+```
+
 ## Features:
 - Setup for probably all MC-Versions
 - Autoupdate of Paper for the specified Version
@@ -21,29 +30,35 @@ This script is made for Debian (min. stable) and Debian based Distros. Might als
 - Download/Install Putty and connect to your Linux-System (get the Ip with a networkscan app or with your Router)
 - Login in with your normal user
 - Grant access to login with root:
->sudo apt-get install nano
-
->sudo nano /etc/ssh/sshd_config
-
+```bash
+sudo apt-get install nano
+```
+```bash
+sudo nano /etc/ssh/sshd_config
+```
 change 'PermitRootLogin yes' to 'PermitRootLogin no' or add '#' before it
-
->sudo /etc/init.d/ssh restart
-
+```bash
+sudo /etc/init.d/ssh restart
+```
 - Close Putty and Reopen it and login with root user (Username: 'root'; password: same as sudo-password)
 - setup the script:
->cd /home/USER/ (replace USER with the name of your normal user-account)
-
->mkdir minecraft
-
+```bash
+cd /home/USER/ (replace USER with the name of your normal user-account)
+```
+```bash
+mkdir minecraft
+```
 - Download/Install WinSCP and conntect to your Linux-System
 - Login with your root user
 - navigate to /home/USER/minecraft
 - upload the 2 scripts
 - change to Putty:
->chmod 0744 start.sh loop.sh
-
->./start.sh
-
+```bash
+chmod 0744 start.sh loop.sh
+```
+```bash
+./start.sh
+```
 ### Change settings in the script:
 - Open the loop.sh file with your Editor
 
@@ -58,9 +73,13 @@ The changes you can do are described in the Comments which are the Lines beginni
 ## USEAGE
 - if you enter /stop into the chat of the Minecraft server it stops, makes the backup, updates PaperMC and Starts again
 - if you want to start the server use Putty and login with your root-user
->cd /home/USER/minecraft (replace USER with the name of your normal user-account)
-
->./start.sh
-
+```bash
+cd /home/USER/minecraft (replace USER with the name of your normal user-account)
+```
+```bash
+./start.sh
+```
 - if you want to login to the serverconsole while the server is running use Putty and login with your root-user
->screen -r
+```bash
+screen -r
+```
